--- a/src/main/resources/templates/transformation.html
+++ b/src/main/resources/templates/transformation.html
@@ -3,11 +3,37 @@
 <head>
     <title>GEO points example</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <style>
+    body {
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+    }
+
+    #map {
+        position: absolute;
+        top: 20%;
+        width: 100%;
+        height: 80%;
+    }
+
+    form {
+        position: absolute;
+        top: 0%;
+        left: 50%;
+        transform: translate(-50%, 0%);
+        background-color: rgba(255, 255, 255, 0.8);
+        padding: 20px;
+        border-radius: 10px;
+        z-index: 100;
+    }
+
+    </style>
 </head>
 <body>
 <div th:if="${errorMessage}" class="error" th:text="${errorMessage}"></div>
 <h1>Transform points crs:</h1>
-<form action="#" th:action="@{/transformation}" th:object="${pointTransformationModel}" method="post">
+<form class="transparent" action="#" th:action="@{/transformation}" th:object="${pointTransformationModel}" method="post">
     <table>
         <tr>
             <th>from</th>
@@ -41,7 +67,7 @@
     <script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js"
             integrity="sha512-QVftwZFqvtRNi0ZyCtsznlKSWOStnDORoefr1enyq5mVL4tmKB3S/EnC3rRJcxCPavG10IcrVGSmPh6Qw5lwrg=="
             crossorigin=""></script>
-    <div id="map" style="width: 600px; height: 400px;"></div>
+    <div id="map"></div>
     <script>
         document.addEventListener("DOMContentLoaded", function () {
             var newX = parseFloat([[${pointTransformationModel.newX}]]);
@@ -60,6 +86,7 @@
                 .bindPopup('Transformed point here')
                 .openPopup();
         });
+
 
     </script>
 </div>
