chore(*) delete z coordinate and add combobox with crs

--- a/src/main/resources/templates/transformation.html
+++ b/src/main/resources/templates/transformation.html
@@ -29,10 +29,15 @@
     }
 
     </style>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css"
+          integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="
+          crossorigin=""/>
+    <script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js"
+            integrity="sha512-QVftwZFqvtRNi0ZyCtsznlKSWOStnDORoefr1enyq5mVL4tmKB3S/EnC3rRJcxCPavG10IcrVGSmPh6Qw5lwrg=="
+            crossorigin=""></script>
 </head>
 <body>
 <div th:if="${errorMessage}" class="error" th:text="${errorMessage}"></div>
-<h1>Transform points crs:</h1>
 <form class="transparent" action="#" th:action="@{/transformation}" th:object="${pointTransformationModel}" method="post">
     <table>
         <tr>
@@ -40,8 +45,16 @@
             <th>to</th>
         </tr>
         <tr>
-            <td>crs: <input type="text" th:field="*{fromCrs}"/></td>
-            <td>crs: <input type="text" th:field="*{toCrs}"/></td>
+            <td>from crs:
+                <select name="fromCrs" th:field="*{fromCrs}">
+                    <option th:each="option : ${fromCrsOptions}" th:value="${option}" th:text="${option}"></option>
+                </select>
+            </td>
+            <td>to crs:
+                <select name="toCrs" th:field="*{toCrs}">
+                    <option th:each="option : ${toCrsOptions}" th:value="${option}" th:text="${option}"></option>
+                </select>
+            </td>
         </tr>
         <tr>
             <td>x: <input type="text" th:field="*{x}"/></td>
@@ -51,42 +64,25 @@
             <td>y: <input type="text" th:field="*{y}"/></td>
             <td>y: <input type="text" th:field="*{newY}"/></td>
         </tr>
-        <tr>
-            <td>z: <input type="text" th:field="*{z}"/></td>
-            <td>z: <input type="text" th:field="*{newZ}"/></td>
-        </tr>
     </table>
-
-    <p><input type="submit" value="Transform"/></p>
+    <input type="submit" value="Transform"/>
 </form>
 
 <div>
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css"
-          integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="
-          crossorigin=""/>
-    <script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js"
-            integrity="sha512-QVftwZFqvtRNi0ZyCtsznlKSWOStnDORoefr1enyq5mVL4tmKB3S/EnC3rRJcxCPavG10IcrVGSmPh6Qw5lwrg=="
-            crossorigin=""></script>
     <div id="map"></div>
     <script>
         document.addEventListener("DOMContentLoaded", function () {
             var newX = parseFloat([[${pointTransformationModel.newX}]]);
             var newY = parseFloat([[${pointTransformationModel.newY}]]);
 
-            var map = L.map('map').setView([newY, newX], 3);
+            var map = L.map('map').setView([newY, newX], 5);
 
             L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
                 attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
             }).addTo(map);
 
-            var newX = parseFloat([[${pointTransformationModel.newX}]]);
-            var newY = parseFloat([[${pointTransformationModel.newY}]]);
-
-            L.marker([newY, newX]).addTo(map)
-                .bindPopup('Transformed point here')
-                .openPopup();
+            L.marker([newY, newX]).addTo(map);
         });
-
 
     </script>
 </div>
